# pluginAICQ

./: .gitignore  LICENSE  README.md
cluadecode-plugin/: README.md
hermes-plugin/: LICENSE  MIGRATION_TO_SDK.md  PLUGIN.yaml  README.md  pyproject.toml
hermes-plugin/aicq_hermes/: __init__.py  adapter.py  chat.py  identity.py  register.py  sdk_adapter.py  server_client.py
openclaw-plugin/: .gitignore  MIGRATION_TO_SDK.md  README.md  SKILL.md  cli.cjs  index.js  openclaw.plugin.json  package-lock.json  package.json  postinstall.cjs  setup-entry.js
openclaw-plugin/lib/: aicq-sdk-adapter.js  chat.js  crypto.js  database.js  handshake.js  identity.js  server-client.js
openclaw-plugin/public/: index.html
openclaw-plugin/src/: channel.js  tools.js  ui-routes.js
