[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicq-hermes"
version = "1.1.0"
description = "AICQ platform adapter plugin for Hermes agent — encrypted chat with NaCl, friend management, file transfer, and tool calling (powered by aicqSDK)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "samaidev", email = "samaidev@users.noreply.github.com"},
]
keywords = ["aicq", "hermes", "agent", "encrypted-chat", "nacl", "platform-adapter", "plugin", "aicqsdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "aicqSDK>=0.9.0",
    "aiohttp>=3.9",
    "pynacl>=1.5",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://aicq.me"
Repository = "https://github.com/samaidev/pluginAICQ"

[tool.setuptools.packages.find]
include = ["aicq_hermes*"]
